--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@
     --color-image: white;
     --color-button: lightgray;
     --color-listitem: white;
+    --color-loading: blue;
 }
 
 /* BODY */
@@ -13,6 +14,10 @@
 
 body {
     font-family: 'Ubuntu', sans-serif;
+}
+
+main {
+    display: none;
 }
 
 .visually-hidden {
@@ -23,6 +28,41 @@ body {
     overflow: hidden;
     position: absolute;
     white-space: nowrap;
+}
+
+
+/* LOADING */
+
+.loading-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+
+.loader {
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid var(--color-loading);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 
@@ -133,6 +173,10 @@ article img {
 /* desktop */
 @media (min-width: 600px) {
 
+    header a{
+        display: none;
+    }
+
     h2 {
         position: relative;
         left: 60px;
@@ -142,7 +186,7 @@ article img {
         grid-template-columns: repeat(2, 1fr);
         width: 50%;
         gap: 10px;
-        margin: 60px;
+        left: 60px;
     }
 
     article {
@@ -175,6 +219,8 @@ article img {
         height: 150px;
         width: 150px;
     }
+
+    
 
 
 }
